# EmpDataRESTPy

./: 002.bat  003.bat  004.bat  005.bat  006.bat  DataDrivenTests.postman_collection.json  EmployeeDataPy.postman_collection.json  README.MD  app.py  appTest.py  data_file.csv  final_datadriven_execution_report.html  final_execution_report.html  package-lock.json  pyproject.toml
